<resources>
    <string name="app_name">jlab.VideoExplorer</string>
    <string name="vp_activity_name">jlab.MediaPlayer</string>
    <string name="ap_activity_name">jlab.AudioPlayer</string>
    <string name="about">About</string>
    <string name="close">Close</string>
    <string name="show_hidden_files">Show hidden videos</string>
    <string name="hidden_hidden_files">Hide hidden videos</string>
    <string name="folder">Album</string>
    <string name="local">Local</string>
    <string name="the_folder">the Album</string>
    <string name="the_file">the file</string>
    <string name="bt_connect">Save</string>
    <string name="bt_cancel">Cancel</string>
    <string name="comment_setting">You can establish a connection with the server with only to configure the IP or Host by where it listens the requests.</string>
    <string name="hint_host">IP or Host</string>
    <string name="hint_port">Port</string>
    <string name="all_music">Music</string>
    <string name="all_video">All Videos</string>
    <string name="camera_folder">Camera</string>
    <string name="downloads_folder">Downloads</string>
    <string name="empty_folder">Not Found Videos.</string>
    <string name="favorite_folder">Favorites</string>
    <string name="add_to_favorite_folder">Add Favorites</string>
    <string name="remove_of_favorite_folder">Remove of Favorites</string>
    <string name="albums_folder">Albums</string>
    <string name="all_images">All Images</string>
    <string name="set_image_as">Set image as</string>
    <string name="show_camera">Show Camera</string>
    <string name="share">Share</string>
    <string name="all_downloads">Downloads</string>
    <string name="files">files</string>
    <string name="open">Open</string>
    <string name="copy">Copy</string>
    <string name="cut">Cut</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="details">Details</string>
    <string name="name">Name:</string>
    <string name="Path">Path:</string>
    <string name="size">Size:</string>
    <string name="type">Type:</string>
    <string name="modification">Modified:</string>
    <string name="new_name">Name</string>
    <string name="file">File</string>
    <string name="invalid_chars_error">The following characters are not allowed:</string>
    <string name="invalid_name">Could not be renamed, the new name contain invalids characters</string>
    <string name="folder_delete">The folder was deleted successfully</string>
    <string name="file_delete">The file was deleted successfully</string>
    <string name="folder_rename">The folder was renamed successfully</string>
    <string name="file_rename">The file was renamed successfully</string>
    <string name="folder_not_rename">Could not be renamed the folder</string>
    <string name="file_not_rename">Could not be renamed the file</string>
    <string name="delete_begin_question">Do you want to delete</string>
    <string name="about_content"><b>jlab.VideoExplorer v1.0</b>, contact to: <i> jlab.apps@gmail.com</i></string>
    <string name="internal_storage">Internal storage</string>
    <string name="hint_download_folder">Download in:</string>
    <string name="hint_comment">Description</string>
    <string name="loading">Loading…</string>
    <string name="lost_connection">Offline.</string>
    <string name="question">Question</string>
    <string name="warning">Warning</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="config">Setting connection</string>
    <string name="begin_download">Starting download…</string>
    <string name="dont_start">Can not play Video.</string>
    <string name="servers">Servers</string>
    <string name="del_server_dialog">Do you want to remove the Server configuration?</string>
    <string name="exist_server_dialog">A server with the same IP or Host already exists</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="downloads">Downloads</string>
    <string name="want_download">Do you want download</string>
    <string name="has_been_downloaded">has been downloaded</string>
    <string name="has_dont_been_downloaded">has not been downloaded</string>
    <string name="pending_to_download">is pending download</string>
    <string name="download_dir_can_not_empty">The download folder cannot be empty</string>
    <string name="port_can_not_empty">The port cannot be empty</string>
    <string name="port_interval">The port must be in the range of 0 to 65535</string>
    <string name="ip_url_can_not_empty">IP or Host can not be empty</string>
    <string name="my_files">My Files</string>
    <string name="new_folder">New Folder</string>
    <string name="new_file">New File</string>
    <string name="folder_created">The folder was created successfully</string>
    <string name="folder_not_created">Could not be created the folder, make sure that not be in the use the given name</string>
    <string name="file_created">The file was created successfully</string>
    <string name="file_not_created">Could not be created the file, make sure that not be in the use the given name</string>
    <string name="copying">Copying…</string>
    <string name="moving">Moving…</string>
    <string name="copy_complete">Copy finished</string>
    <string name="moving_complete">Moving finished</string>
    <string name="copy_interrupted">Copy interrupted</string>
    <string name="moving_interrupted">Moving interrupted</string>
    <string name="hide">Hide</string>
    <string name="wait_transference">Only can have a transfer in the same time, wait that finish the current transference</string>
    <string name="deleting">Deleting…</string>
    <string name="delete_complete">Deleting finished</string>
    <string name="delete_interrupted">Deleting interrupted</string>
    <string name="wait_deleting">Only can have a deleting task in the same time, wait that finish the current task</string>
    <string name="copied_successfully">it was copied successfully</string>
    <string name="moved_successfully">it was moved successfully</string>
    <string name="deleted_successfully">it was deleted successfully</string>
    <string name="not_moved">not can be moved</string>
    <string name="not_copied">not can be copied</string>
    <string name="not_deleted">not can be deleted</string>
    <string name="available">Available</string>
    <string name="total">Total</string>
    <string name="audio_files">Audio files</string>
    <string name="search">Search</string>
    <string name="paste">Paste</string>
    <string name="all_documents">Documents</string>
    <string name="new_server">Add New Server</string>
    <string name="permission_denied">jlab.FileTransfer cannot be executed, you have provide the following permissions:</string>
    <string name="enqueue_file_to_downloads">Added file to downloads queue</string>
    <string name="enqueue">in queue</string>
    <string name="not_any">not any</string>
    <string name="mail">jlab.apps@gmail.com</string>
    <string name="contact">Contact</string>
    <string name="app_mail_not_found">You do not have an email application.</string>
    <string name="rate_app">Rate this app</string>
    <string name="preparing_for_play">Preparing for play…</string>
    <string name="elements">elems.</string>
</resources>
